tests/negative/gold/abstract2_test.gold
tests/negative/abstract2_test.toit:10:12: error: Unresolved identifier: 'foo'
    return super
           ^~~~~
Compilation failed.
